# local-airflow-ml

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dags/: k8s_pipeline.py
ml-base/: train.py
