[project]
name = "airflow-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow[extras,mlserver]>=3.8.1",
    "scikit-learn>=1.8.0",
    "boto3>=1.35.0",
    "tenacity>=9.0.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "ansible>=13.2.0",
    "ansible-core>=2.20.1",
    "loguru>=0.7.3",
]
